# studfinder

./: .clippy.toml  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  rustfmt.toml
.github/workflows/: rust.yml
src/: color_detector.rs  config.rs  db.rs  detector.rs  error.rs  image_processor.rs  lib.rs  main.rs  scanner.rs
src/core/: config.rs  mod.rs  piece.rs
src/processing/: color.rs  detector.rs  mod.rs  processor.rs  scanner.rs
src/storage/: database.rs  export.rs  mod.rs
tests/: color_detection_test.rs  mock_test.rs  workflow_test.rs
