[package]
name = "studfinder"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
image = "0.24"
imageproc = "0.23"
rusttype = "0.9"
ndarray = "0.15"
rusqlite = { version = "0.30", features = ["bundled"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }
directories = "5.0"

[dev-dependencies]
tempfile = "3.8"
assert_fs = "1.0"
mockall = "0.11"
test-case = "3.1"
predicates = "3.0"
